Fix rich text spacing on rest of templates

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,5 +13,9 @@ a {
     color: black;
 }
 
+blockquote {
+    color: red;
+}
+
 
 
